# xg-bindings

./: .gitmodules  Cargo.toml  dm.json
src/: booster.rs  diter.rs  dmatrix.rs  error.rs  lib.rs
src/parameters/: learning.rs  mod.rs
tmp_data/: X-0.npy  X-1.npy  X-10.npy  X-11.npy  X-12.npy  X-13.npy  X-14.npy  X-15.npy  X-16.npy  X-17.npy  X-18.npy  X-19.npy  X-2.npy  X-20.npy  X-21.npy  X-22.npy  X-23.npy  X-24.npy  X-25.npy  X-26.npy  X-27.npy  X-28.npy  X-29.npy  X-3.npy  X-30.npy  X-4.npy  X-5.npy  X-6.npy  X-7.npy  X-8.npy  X-9.npy  y-0.npy  y-1.npy  y-10.npy  y-11.npy  y-12.npy  y-13.npy  y-14.npy  y-15.npy  y-16.npy  (+22 more)
