[package]
name = "xgboost-bindings"
version = "0.1.0"
edition = "2021"

[dependencies]
xgboost-bib =  {git = "https://github.com/MarWeUMR/xgboost-bib"}
# xgboost-bib =  {path = "xgboost-bib"}
libc = "*"
derive_builder = "0.5"
log = "0.4"
tempfile = "3.0"
indexmap = "1.0"

[lib]
doctest = false # important because docstring tests fail with bindgen!
